--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,5 @@
 ADMIN_NAME=First User
 ADMIN_EMAIL=user@example.com
 ADMIN_PASSWORD=changeme
+
+# This to be used in development to get around pundit and devices
