--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# can be updated
+
 #----------------------------------------------------------------------------
 # Ignore these files when commiting to a git repository.
 #
